<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_numtrack"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:text="@string/numero"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txt_track"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/track"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txt_trackArtista"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:text="@string/artista"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/iv_trackimage"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen" />

</LinearLayout>