<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fem.miw.upm.es.clientebuscamusic.FiltroAlbum">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/introduce_artista"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />


    <EditText
        android:id="@+id/edit_filtroAlbumartista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ej_artista"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/introduce_disco"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />


    <EditText
        android:id="@+id/edit_filtroAlbumalbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/ej_disco"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_filtrobuscarArtista"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorAccent"
        android:onClick="buscarFiltroAlbum"
        android:text="@string/buscar"
        android:textColor="@android:color/black"
        android:textSize="18sp">
    </Button>

</LinearLayout>
