<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fem.miw.upm.es.clientebuscamusic.BuscarArtista">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/nombre"
                android:textColor="@color/colorTitulos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_nombreArtista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/imagen"
                app:srcCompat="@drawable/ic_busca_music" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:text="@string/puntuaci_n"
                    android:textStyle="bold"
                    android:textColor="@color/colorTitulos"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_puntuacionArtista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_puntuar"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:onClick="puntuar"
                    android:text="@string/puntuar"
                    android:textColor="@android:color/black"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/informaci_n"
        android:textColor="@color/colorTitulos"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_infoArtista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="3dp"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

    </ScrollView>

</LinearLayout>
